<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="openURL"
        android:text="@string/open_facebook_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="16dp"
        android:onClick="printSomething"
        android:text="@string/main_button"
        app:layout_constraintBottom_toTopOf="@+id/main_button_two"
        app:layout_constraintStart_toStartOf="@+id/main_button_two" />

    <Button
        android:id="@+id/main_button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:onClick="printSomething"
        android:text="@string/other_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_to_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="15dp"
        android:onClick="passText"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="@+id/main_button_two"
        app:layout_constraintTop_toBottomOf="@+id/main_button_two" />

    <TextView
        android:id="@+id/textview_main_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="9dp"
        android:text="@string/pass_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_main_to_activity"
        app:layout_constraintTop_toBottomOf="@+id/button_main_to_activity" />

    <Spinner
        android:id="@+id/spinner_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="111dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_main_pass_text" />
</androidx.constraintlayout.widget.ConstraintLayout>